# Interpreter

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/ast/: ast.cpp  ast.hpp
lib/builtins/: builtins.cpp  builtins.hpp
lib/builtins/std/: real_number.cpp  real_number.hpp
lib/environment/: environment.cpp  environment.hpp
lib/interpreter/core/: interpreter.cpp  interpreter.hpp
lib/interpreter/debug/: exceptions.hpp
lib/interpreter/execution/: expression_evaluator.cpp  expression_evaluator.hpp  statement_executor.cpp  statement_executor.hpp
lib/lexer/: lexer.cpp  lexer.hpp
lib/lexer/token/: token.hpp
lib/modules/: module_loader.cpp  module_loader.hpp
lib/parser/: parser.cpp  parser.hpp
lib/value/: value.cpp  value.hpp
tests/: CMakeLists.txt  INFO.MD
tests/01_expressions_tests/: CMakeLists.txt  integer_expressions_test.cpp  string_expressions_test.cpp
tests/02_statements_tests/: CMakeLists.txt  integer_statements_test.cpp  string_statements_test.cpp
tests/03_operations_tests/: CMakeLists.txt  integer_operations.cpp  string_operations.cpp
tests/05_ifs_and_loops_tests/: CMakeLists.txt  loop_and_branch_test.cpp
tests/06_custom_functions_tests/: CMakeLists.txt  functions.cpp
tests/full_time_programs_tests/: CMakeLists.txt  illegal_ops_test.cpp
